# ComfyUI-XPUSYS-Monitor

./: .commitmsg  .gitignore  CHANGELOG.md  README.md  README_CN.md  README_EN.md  __init__.py  check_igcl_power.py  check_pdh_power.py  diagnose_rsv.py  mdapi_explore.py  pack_plugin.py  predictor_algorithm.md  predictor_explained.md  pyproject.toml  requirements.txt  xpu_server.py
.workbuddy/memory/: 2026-04-01.md  2026-05-14.md  2026-07-04.md  2026-07-10.md  MEMORY.md
docs/: comfyui-manager-submit-guide.md  predictor_explained_CN.md  predictor_explained_EN.md  video_script_comfyui_plugin.md
providers/: __init__.py  amd.py  base.py  intel.py  nvidia.py
web/: gpu_specs.json  xpu_monitor.js
